--- a/deepincn/dtkcommon-git/PKGBUILD
+++ b/deepincn/dtkcommon-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkcommon-git
-pkgver=5.5.3.r4.g195bb8f
+pkgver=5.5.17.r0.gebf89f3
 pkgrel=1
 pkgdesc='DTK common modules'
 arch=('x86_64')
