--- a/deepincn/deepin-qt5platform-plugins-git/PKGBUILD
+++ b/deepincn/deepin-qt5platform-plugins-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-qt5platform-plugins-git
-pkgver=5.0.23.r26.g0e78122
+pkgver=5.0.40.r7.geb4e40b
 pkgrel=1
 pkgdesc='Qt platform plugins for DDE'
 arch=('x86_64')
