--- a/deepincn/golang-deepin-lib-git/PKGBUILD
+++ b/deepincn/golang-deepin-lib-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=golang-deepin-lib-git
-pkgver=5.7.6.r4.gd2364c1
+pkgver=5.7.10.r15.g1e30e3e
 pkgrel=1
 pkgdesc='A library containing many useful go routines for things such as glib, gettext, archive, graphic,etc.'
 arch=('any')
