--- a/deepincn/dtkgui-git/PKGBUILD
+++ b/deepincn/dtkgui-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkgui-git
-pkgver=5.4.0.r39.g959c3eb
+pkgver=5.5.17.1.r5.gd2b4153
 pkgrel=1
 pkgdesc='Deepin Toolkit, gui module for DDE look and feel'
 arch=('x86_64')
