deepin-qt-dbus-factory-git: auto updated to 5.4.10.r20.g5dec84d-1

--- a/deepincn/deepin-qt-dbus-factory-git/PKGBUILD
+++ b/deepincn/deepin-qt-dbus-factory-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: DingYuan Zhang <justforlxz@gmail.com>
 
 pkgname=deepin-qt-dbus-factory-git
-pkgver=5.4.5.r5.g2630600
+pkgver=5.4.10.r20.g5dec84d
 pkgrel=1
 pkgdesc='A repository stores auto-generated Qt5 dbus code (libdframeworkdbus)'
 arch=('x86_64')
