--- a/deepincn/deepin-desktop-schemas-git/PKGBUILD
+++ b/deepincn/deepin-desktop-schemas-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-desktop-schemas-git
-pkgver=5.9.16.r4.g86a2073
+pkgver=5.9.16.r11.gbae658d
 pkgrel=1
 pkgdesc='GSettings deepin desktop-wide schemas'
 arch=('any')
