--- a/deepincn/deepin-api-git/PKGBUILD
+++ b/deepincn/deepin-api-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-api-git
-pkgver=5.4.9.r13.g621cd5f
+pkgver=5.4.9.r17.gc2516df
 pkgrel=1
 pkgdesc='Golang bindings for dde-daemon'
 arch=('x86_64')
