--- a/deepincn/startdde-git/PKGBUILD
+++ b/deepincn/startdde-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=startdde-git
-pkgver=5.8.22.r36.g24a7e67
+pkgver=5.8.22.r50.g95661a3
 pkgrel=1
 pkgdesc="starter of deepin desktop environment"
 arch=('x86_64')
