--- a/deepincn/deepin-kwin-git/lilac.yaml
+++ b/deepincn/deepin-kwin-git/lilac.yaml
@@ -12,6 +12,6 @@ post_build: aur_post_build
 
 update_on:
   - source: github
-    github: linuxdeepin/deepin-kwin-git
+    github: linuxdeepin/dde-kwin
   - source: aur
     aur: deepin-kwin-git
