--- a/deepincn/dtkcommon-git/PKGBUILD
+++ b/deepincn/dtkcommon-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkcommon-git
-pkgver=5.5.17.r5.g0b6f555
+pkgver=5.5.17.r6.g274d009
 pkgrel=1
 pkgdesc='DTK common modules'
 arch=('x86_64')
