--- a/deepincn/deepin-pw-check-git/PKGBUILD
+++ b/deepincn/deepin-pw-check-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-pw-check-git
-pkgver=5.0.11.r12.g5131a8b
+pkgver=5.1.2.r5.gef201e1
 pkgrel=1
 pkgdesc='deepin-pw-check is a tool to verify the validity of the password'
 arch=('x86_64')
