--- a/deepincn/deepin-qt5platform-plugins-git/PKGBUILD
+++ b/deepincn/deepin-qt5platform-plugins-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-qt5platform-plugins-git
-pkgver=5.0.40.r10.gd912073
+pkgver=5.0.40.r11.gd872925
 pkgrel=1
 pkgdesc='Qt platform plugins for DDE'
 arch=('x86_64')
@@ -22,6 +22,16 @@ pkgver() {
 
 prepare() {
   cd $pkgname
+
+  rm -r xcb/libqt5xcbqpa-dev wayland/qtwayland-dev
+  # Disable wayland for now: https://github.com/linuxdeepin/qt5platform-plugins/issues/47
+  sed -i '/wayland/d' qt5platform-plugins.pro
+
+  sed -i 's|error(Not support Qt Version: .*)|INCLUDEPATH += /usr/include/qtxcb-private|' xcb/linux.pri
+  sed -i "/qtwayland-dev/a /usr/include/qt/QtWaylandClient/$(expac %v qt5-wayland | cut -d - -f 1) /usr/include/qt/QtXkbCommonSupport/$(expac %v qt5-base | cut -d - -f 1) \\\\" wayland/wayland.pro
+
+  # https://github.com/linuxdeepin/qt5platform-plugins/pull/48
+  sed -i 's/xcbWindow-/window-/' xcb/windoweventhook.cpp
 }
 
 build() {
