--- a/deepincn/dtkgui-git/PKGBUILD
+++ b/deepincn/dtkgui-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkgui-git
-pkgver=5.5.17.1.r11.g10df238
+pkgver=5.5.17.1.r12.ga53f411
 pkgrel=1
 pkgdesc='Deepin Toolkit, gui module for DDE look and feel'
 arch=('x86_64')
