--- a/deepincn/deepin-daemon-git/PKGBUILD
+++ b/deepincn/deepin-daemon-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-daemon-git
 pkgver=5.13.12.r44.g69a670c7
 pkgrel=1
 pkgdesc='Daemon handling the DDE session settings'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-daemon"
 license=('GPL3')
 depends=('deepin-desktop-schemas-git' 'ddcutil' 'deepin-api-git' 'gvfs' 'iso-codes' 'lsb-release'
