--- a/deepincn/deepin-pw-check-git/PKGBUILD
+++ b/deepincn/deepin-pw-check-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-pw-check-git
 pkgver=5.1.2.r5.gef201e1
 pkgrel=9
 pkgdesc='deepin-pw-check is a tool to verify the validity of the password'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/deepin-pw-check"
 license=('GPL3')
 depends=('cracklib' 'iniparser' 'pam')
