--- a/deepincn/deepin-anything-git/PKGBUILD
+++ b/deepincn/deepin-anything-git/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=5.0.10.r11.gb5a2fa4
 _extramodules=extramodules-ARCH
 pkgrel=3
 pkgdesc="Deepin Anything file search tool"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/deepin-anything"
 license=('GPL3')
 makedepends=('git' 'dtkcore-git' 'udisks2-qt5')
