--- a/deepincn/deepin-api-git/PKGBUILD
+++ b/deepincn/deepin-api-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-api-git
 pkgver=5.4.9.r17.gc2516df
 pkgrel=10
 pkgdesc='Golang bindings for dde-daemon'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-api"
 license=('GPL3')
 # alsa-utils: alsactl used in sound-theme-player
