--- a/deepincn/deepin-control-center-git/PKGBUILD
+++ b/deepincn/deepin-control-center-git/PKGBUILD
@@ -5,7 +5,7 @@ _pkgname=deepin-control-center
 pkgver=5.4.17.r110.gf1dbfc44e
 pkgrel=1
 pkgdesc='New control center for linux deepin'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-control-center"
 license=('GPL3')
 depends=('dtkwidget-git' 'deepin-account-faces' 'libpwquality' 'startdde-git'
