--- a/deepincn/deepin-dock-git/PKGBUILD
+++ b/deepincn/deepin-dock-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-dock-git
 pkgver=5.4.10.r46.g8ce063e3a
 pkgrel=1
 pkgdesc='Deepin desktop-environment - dock module'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-dock"
 license=('GPL3')
 depends=('qt5-svg' 'deepin-daemon-git' 'deepin-qt5integration-git'
