--- a/deepincn/deepin-polkit-agent-git/PKGBUILD
+++ b/deepincn/deepin-polkit-agent-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-polkit-agent-git
 pkgver=5.4.3.r3.g6140269
 pkgrel=1
 pkgdesc='Deepin Polkit Agent'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-polkit-agent"
 license=('GPL3')
 depends=('deepin-qt-dbus-factory-git' 'startdde-git' 'polkit-qt5' 'dtkwidget-git')
