--- a/deepincn/deepin-session-shell-git/PKGBUILD
+++ b/deepincn/deepin-session-shell-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-session-shell-git
 pkgver=5.4.13.r94.gd5476f7
 pkgrel=1
 pkgdesc='Deepin desktop-environment - session-shell module'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-session-shell"
 license=('GPL3')
 depends=('deepin-daemon-git' 'deepin-wallpapers' 'gsettings-qt' 'liblightdm-qt5' 'startdde-git')
