--- a/deepincn/deepin-session-ui-git/PKGBUILD
+++ b/deepincn/deepin-session-ui-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=deepin-session-ui-git
 pkgver=5.4.7.r14.gbf990e94
 pkgrel=1
 pkgdesc='Deepin desktop-environment - Session UI module'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-session-ui"
 license=('GPL3')
 groups=('deepin')
