--- a/deepincn/disomaster-git/PKGBUILD
+++ b/deepincn/disomaster-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=disomaster-git
 pkgver=5.0.7.r2.g157dd8f
 pkgrel=12
 pkgdesc='Library to manipulate DISC burning.'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/disomaster"
 license=('GPL3')
 depends=('libisoburn')
