--- a/deepincn/dtkcommon-git/PKGBUILD
+++ b/deepincn/dtkcommon-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=dtkcommon-git
 pkgver=5.5.17.r8.gfe3dd87
 pkgrel=10
 pkgdesc='DTK common modules'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dtkcommon"
 license=('LGPL3')
 depends=()
