--- a/deepincn/dtkcore-git/PKGBUILD
+++ b/deepincn/dtkcore-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=dtkcore-git
 pkgver=5.5.17.1.r33.g0156186
 pkgrel=1
 pkgdesc='DTK core modules'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dtkcore"
 license=('LGPL3')
 depends=('dconf' 'deepin-desktop-base-git' 'python' 'gsettings-qt' 'lshw')
