--- a/deepincn/startdde-git/PKGBUILD
+++ b/deepincn/startdde-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=startdde-git
 pkgver=5.8.22.r50.g95661a3
 pkgrel=9
 pkgdesc="starter of deepin desktop environment"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/startdde"
 license=('GPL3')
 depends=('libgnome-keyring')
