change path to github.com

--- a/deepincn/deepin-api-git/PKGBUILD
+++ b/deepincn/deepin-api-git/PKGBUILD
@@ -35,8 +35,8 @@ prepare() {
   cd $srcdir
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
-  mkdir -p build/src/pkg.deepin.io/dde/api
-  cp -a $pkgname/* build/src/pkg.deepin.io/dde/api/
+  mkdir -p build/src/github.com/linuxdeepin/dde/api
+  cp -a $pkgname/* build/src/github.com/linuxdeepin/dde/api/
 
   # golang-deepin-lib's dependency, remove when go packaging resumes
   go get -v github.com/cryptix/wav
