--- a/deepincn/golang-deepin-lib-git/PKGBUILD
+++ b/deepincn/golang-deepin-lib-git/PKGBUILD
@@ -36,9 +36,9 @@ prepare() {
 check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
-  mkdir -p "$srcdir"/build/src/pkg.deepin.io
-  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/pkg.deepin.io/lib
-  cd "$srcdir"/build/src/pkg.deepin.io/lib
+  mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
+  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/github.com/linuxdeepin/lib
+  cd "$srcdir"/build/src/github.com/linuxdeepin/lib
   # TODO: make packages for them
   go get github.com/cryptix/wav github.com/smartystreets/goconvey/convey github.com/mozillazg/go-pinyin gopkg.in/yaml.v3
   # TODO: figure out why pulse tests hang
@@ -53,8 +53,8 @@ check() {
 }
 
 package() {
-  mkdir -p "$pkgdir"/usr/share/gocode/src/pkg.deepin.io
-  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/pkg.deepin.io/lib
+  mkdir -p "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin
+  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/lib
 
-  rm -r "$pkgdir"/usr/share/gocode/src/pkg.deepin.io/lib/debian
+  rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/lib/debian
 }
