--- a/deepincn/golang-deepin-lib-git/PKGBUILD
+++ b/deepincn/golang-deepin-lib-git/PKGBUILD
@@ -37,8 +37,8 @@ check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
-  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/github.com/linuxdeepin/lib
-  cd "$srcdir"/build/src/github.com/linuxdeepin/lib
+  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/github.com/linuxdeepin/go-lib
+  cd "$srcdir"/build/src/github.com/linuxdeepin/go-lib
   # TODO: make packages for them
   go get github.com/cryptix/wav github.com/smartystreets/goconvey/convey github.com/mozillazg/go-pinyin gopkg.in/yaml.v3
   # TODO: figure out why pulse tests hang
@@ -54,7 +54,7 @@ check() {
 
 package() {
   mkdir -p "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin
-  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/lib
+  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-lib
 
-  rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/lib/debian
+  rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-lib/debian
 }
