--- a/deepincn/deepin-api-git/PKGBUILD
+++ b/deepincn/deepin-api-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-api-git
-pkgver=5.4.9.r17.gc2516df
-pkgrel=10
+pkgver=5.5.5.r19.g1253eb6
+pkgrel=1
 pkgdesc='Golang bindings for dde-daemon'
 arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dde-api"
@@ -40,6 +40,7 @@ prepare() {
 
   # golang-deepin-lib's dependency, remove when go packaging resumes
   go get -v github.com/cryptix/wav
+  go get -v github.com/youpy/go-wav
   go get -v github.com/disintegration/imaging
   go get -v github.com/fogleman/gg
   go get -v github.com/mattn/go-sqlite3
