--- a/deepincn/startdde-git/PKGBUILD
+++ b/deepincn/startdde-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=startdde-git
-pkgver=5.8.22.r50.g95661a3
-pkgrel=9
+pkgver=5.8.22.r112.ga7a2b88
+pkgrel=1
 pkgdesc="starter of deepin desktop environment"
 arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/startdde"
@@ -29,6 +29,7 @@ prepare() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   go get -v github.com/cryptix/wav
+  go get -v github.com/youpy/go-wav
   go get -v golang.org/x/xerrors
   go get -v github.com/fsnotify/fsnotify
   go get -v github.com/godbus/dbus
@@ -39,8 +40,7 @@ prepare() {
 }
 
 build() {
-  export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
-
+  export GOFLAGS="-mod=readonly -modcacherw"
   cd $pkgname
   make
 }
