--- a/deepincn/aarch64/dtkcore-git/PKGBUILD
+++ b/deepincn/aarch64/dtkcore-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkcore-git
-pkgver=5.5.17.1.r33.g0156186
+pkgver=5.5.23.r5.g74f86b0
 pkgrel=1
 pkgdesc='DTK core modules'
 arch=('aarch64')
@@ -12,20 +12,12 @@ makedepends=('git' 'qt5-tools' 'gtest' 'dtkcommon-git')
 conflicts=('dtkcore')
 provides=('dtkcore')
 groups=('deepin-git')
-source=("$pkgname::git://github.com/linuxdeepin/dtkcore.git"
-        "fix-ut.patch"
-       )
-sha512sums=('SKIP'
-            '1ace18326ddd5fd14bf652b21db9ee9f706f1dae63f23e9712e7d9142487bff43e1464d2d5bf46e2cfec6663e3153629749ec5e99c1b5e9e785071d6fa9301b2')
+source=("$pkgname::git://github.com/linuxdeepin/dtkcore.git")
+sha512sums=('SKIP')
 
 pkgver() {
     cd $pkgname
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
-
-prepare() {
-  cd $pkgname
-  patch -p1 -i ../fix-ut.patch
 }
 
 build() {
