--- a/deepincn/aarch64/deepin-icon-theme-git/PKGBUILD
+++ b/deepincn/aarch64/deepin-icon-theme-git/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Xu Fasheng <fasheng.xu[AT]gmail.com>
 
 pkgname=deepin-icon-theme-git
-pkgver=2020.06.10.r5.gfcfd181
+pkgver=2021.11.24.r0.g572b049d
 pkgrel=1
 pkgdesc="Deepin GTK Theme"
 arch=('any')
