--- a/deepincn/any/deepin-sound-theme-git/lilac.yaml
+++ b/deepincn/any/deepin-sound-theme-git/lilac.yaml
@@ -4,19 +4,14 @@ maintainers:
   - github: justforlxz
     email: justforlxz@gmail.com
 
-build_prefix: extra-x86_64
+build_prefix: extra-aarch64
 
 pre_build_script: aur_pre_build(maintainers='justforlxz')
 
 post_build: aur_post_build
 
-repo_depends:
-  - golang-deepin-gir-git
-  - golang-github-linuxdeepin-go-x11-client-git
-  - golang-deepin-lib-git
-
 update_on:
   - source: github
-    github: linuxdeepin/deepin-desktop-schemas
+    github: linuxdeepin/deepin-sound-theme
   - source: aur
-    aur: deepin-desktop-schemas-git
+    aur: deepin-sound-theme-git
