--- a/deepincn/deepin-wallpapers-git/PKGBUILD
+++ b/deepincn/deepin-wallpapers-git/PKGBUILD
@@ -13,7 +13,7 @@ pkgdesc='Deepin Wallpapers'
 arch=('any')
 license=('GPL')
 url="https://github.com/linuxdeepin/deepin-wallpapers"
-makedepends=('deepin-api-git')
+makedepends=('git' 'deepin-api-git')
 groups=('deepin-git')
 source=("$pkgname::git://github.com/linuxdeepin/deepin-wallpapers/")
 sha512sums=('SKIP')
