--- a/deepincn/deepin-icon-theme-git/PKGBUILD
+++ b/deepincn/deepin-icon-theme-git/PKGBUILD
@@ -10,6 +10,7 @@ pkgrel=1
 pkgdesc="Deepin GTK Theme"
 arch=('any')
 url="https://github.com/linuxdeepin/deepin-gtk-theme"
+makedepends=('git')
 license=('LGPL3')
 optdepends=('gtk-engine-murrine: for gtk2 themes')
 groups=('deepin')
