--- a/deepincn/deepin-sound-theme-git/PKGBUILD
+++ b/deepincn/deepin-sound-theme-git/PKGBUILD
@@ -3,11 +3,10 @@
 pkgname=deepin-sound-theme-git
 pkgver=15.10.6.r2.ge3aa7fb
 pkgrel=1
-pkgver=15.10.6.r2.ge3aa7fb
-pkgrel=1
 pkgdesc="Deepin sound theme"
 arch=('any')
 url="https://github.com/linuxdeepin/deepin-sound-theme"
+makedepends=('git')
 license=('GPL3')
 groups=('deepin-git')
 conflicts=('deepin-artwork' 'deepin-sound-theme')
