--- a/deepincn/deepin-turbo-git/PKGBUILD
+++ b/deepincn/deepin-turbo-git/PKGBUILD
@@ -8,7 +8,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/deepin-turbo"
 license=('GPL3')
 depends=('qt5-base')
-makedepends=('cmake')
+makedepends=('cmake' 'git')
 groups=('deepin')
 provides=('deepin-turbo')
 conflicts=('deepin-turbo')
