--- a/deepincn/tag/deepin-desktop-base/PKGBUILD
+++ b/deepincn/tag/deepin-desktop-base/PKGBUILD
@@ -16,12 +16,12 @@ sha512sums=('SKIP'
             '27625e6d0786b8adacdb7c52806d4faa28d2ab6b319a593b3ea9bcb69f0cc18ea19b258d629e3a0069ef9a69503589b0285289caef39a1e85bbd99e915c7cd7d')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make DESTDIR="$pkgdir" install
 
   install -Dm644 "$srcdir"/distribution.info -t "$pkgdir"/usr/share/deepin/
