--- a/deepincn/tag/deepin-icon-theme/PKGBUILD
+++ b/deepincn/tag/deepin-icon-theme/PKGBUILD
@@ -18,12 +18,12 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/deepin-icon-the
 sha512sums=('SKIP')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make hicolor-links
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make DESTDIR="$pkgdir" install
 
   cp -a ./Sea ./usr/share/icons/hicolor "$pkgdir"/usr/share/icons/
