--- a/deepincn/tag/deepin-network-utils/PKGBUILD
+++ b/deepincn/tag/deepin-network-utils/PKGBUILD
@@ -14,12 +14,12 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/dde-network-uti
 sha512sums=('SKIP')
 
 build(){
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
