--- a/deepincn/tag/deepin-polkit-agent-ext-gnomekeyring/PKGBUILD
+++ b/deepincn/tag/deepin-polkit-agent-ext-gnomekeyring/PKGBUILD
@@ -14,13 +14,13 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/dpa-ext-gnomeke
 sha512sums=('SKIP')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
 
   cmake . -G Ninja -DCMAKE_INSTALL_PREFIX=/usr
   ninja
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
