--- a/deepincn/tag/deepin-polkit-agent/PKGBUILD
+++ b/deepincn/tag/deepin-polkit-agent/PKGBUILD
@@ -16,17 +16,17 @@ sha512sums=('SKIP'
             'b02235cece90a01942cd0898cfb85c7eb8fa6f980c4e1d83cfa115baba1599ca878788b5d89338444afe8267c30b11f9279ebda98d3bbc3dd4f3fe03cd1f0572')
 
 prepare() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   patch -p1 -i ../fix.patch
 }
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   cmake . -G Ninja -DCMAKE_INSTALL_PREFIX=/usr
   ninja
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
