--- a/deepincn/tag/deepin-turbo/PKGBUILD
+++ b/deepincn/tag/deepin-turbo/PKGBUILD
@@ -14,12 +14,12 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/deepin-turbo/ar
 sha512sums=('SKIP')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=Release .
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make DESTDIR="$pkgdir" install
 }
