--- a/deepincn/tag/dtkgui/PKGBUILD
+++ b/deepincn/tag/dtkgui/PKGBUILD
@@ -14,12 +14,12 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/dtkgui/archive/
 sha512sums=('SKIP')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   qmake-qt5 PREFIX=/usr DTK_VERSION=$pkgver LIB_INSTALL_DIR=/usr/lib
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
