--- a/deepincn/tag/dtkwidget/PKGBUILD
+++ b/deepincn/tag/dtkwidget/PKGBUILD
@@ -15,16 +15,16 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/dtkwidget/archi
 sha512sums=('SKIP')
 
 prepare() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
 }
 
 build() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $(echo $url | awk -F/ '{print $NF}')-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
