--- a/deepincn/git/deepin-api-git/PKGBUILD
+++ b/deepincn/git/deepin-api-git/PKGBUILD
@@ -32,6 +32,13 @@ pkgver() {
 }
 
 prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
+prepare() {
   cd $srcdir
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
