--- a/deepincn/git/deepin-daemon-git/PKGBUILD
+++ b/deepincn/git/deepin-daemon-git/PKGBUILD
@@ -38,6 +38,13 @@ pkgver() {
 }
 
 prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
+prepare() {
   cd $pkgname
   patch -p1 -i ../remove-tc.patch
   patch -p1 -i ../dde-daemon.patch
