--- a/deepincn/git/deepin-polkit-agent-git/PKGBUILD
+++ b/deepincn/git/deepin-polkit-agent-git/PKGBUILD
@@ -24,6 +24,10 @@ pkgver() {
 
 prepare() {
   cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
+
   patch -p1 -i ../fix.patch
 }
 
