--- a/deepincn/git/deepin-session-shell-git/PKGBUILD
+++ b/deepincn/git/deepin-session-shell-git/PKGBUILD
@@ -22,6 +22,10 @@ pkgver() {
 
 prepare() {
   cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
+
   sed -i 's/5\.5//g' CMakeLists.txt tests/lightdm-deepin-greeter/CMakeLists.txt tests/dde-lock/CMakeLists.txt
 }
 
