--- a/deepincn/git/deepin-session-ui-git/PKGBUILD
+++ b/deepincn/git/deepin-session-ui-git/PKGBUILD
@@ -25,6 +25,10 @@ pkgver() {
 
 prepare() {
   cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
+
   sed -i 's|/usr/share/backgrounds/default_background.jpg|/usr/share/backgrounds/deepin/desktop.jpg|' widgets/*.cpp
   patch -p1 -i ../fix-cmakelist.patch
 }
