--- a/deepincn/git/dtkwidget-git/PKGBUILD
+++ b/deepincn/git/dtkwidget-git/PKGBUILD
@@ -22,7 +22,10 @@ pkgver() {
 }
 
 prepare() {
-  cd $pkgname
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
 }
 
 build() {
