--- a/deepincn/git/deepin-account-faces-git/PKGBUILD
+++ b/deepincn/git/deepin-account-faces-git/PKGBUILD
@@ -19,6 +19,13 @@ pkgver() {
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
+prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
 package() {
   cd $pkgname
   make DESTDIR="$pkgdir" install
