--- a/deepincn/git/deepin-control-center-git/PKGBUILD
+++ b/deepincn/git/deepin-control-center-git/PKGBUILD
@@ -37,6 +37,13 @@ pkgver() {
 }
 
 prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
+prepare() {
   rm $pkgname/src/frame/modules/authentication/widgets/faceinfowidget.h
   rm $pkgname/src/frame/modules/authentication/widgets/faceinfowidget.cpp
   rm -rf $pkgname/src/frame/window/modules/authentication
