--- a/deepincn/git/deepin-network-utils-git/PKGBUILD
+++ b/deepincn/git/deepin-network-utils-git/PKGBUILD
@@ -20,6 +20,13 @@ pkgver() {
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
+prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
 build(){
   cd $pkgname
   qmake-qt5 PREFIX=/usr
