--- a/deepincn/git/deepin-pw-check-git/PKGBUILD
+++ b/deepincn/git/deepin-pw-check-git/PKGBUILD
@@ -21,7 +21,11 @@ pkgver() {
 }
 
 prepare() {
-    cd $pkgname
+  cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
+
     export GOPATH="$srcdir/build:/usr/share/gocode"
     export GO111MODULE=off
     go get -v github.com/godbus/dbus
