--- a/deepincn/git/deepin-sound-theme-git/PKGBUILD
+++ b/deepincn/git/deepin-sound-theme-git/PKGBUILD
@@ -18,6 +18,13 @@ pkgver() {
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
+prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
 build() {
   cd $pkgname
   make
