--- a/deepincn/git/deepin-turbo-git/PKGBUILD
+++ b/deepincn/git/deepin-turbo-git/PKGBUILD
@@ -20,6 +20,13 @@ pkgver() {
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
+prepare() {
+    cd $pkgname
+    if [[ ! -z ${sha} ]];then
+      git checkout -b $sha
+    fi
+}
+
 build() {
   cd $pkgname
   cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=Release .
