--- a/deepincn/git/golang-github-linuxdeepin-go-dbus-factory-git/PKGBUILD
+++ b/deepincn/git/golang-github-linuxdeepin-go-dbus-factory-git/PKGBUILD
@@ -21,6 +21,11 @@ pkgver() {
 }
 
 prepare() {
+  cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
+
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
