--- a/deepincn/git/startdde-git/PKGBUILD
+++ b/deepincn/git/startdde-git/PKGBUILD
@@ -26,6 +26,10 @@ pkgver() {
 }
 
 prepare() {
+  cd $pkgname
+  if [[ ! -z ${sha} ]];then
+    git checkout -b $sha
+  fi
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   go get -v github.com/cryptix/wav
