--- a/deepincn/tag/golang-deepin-lib/PKGBUILD
+++ b/deepincn/tag/golang-deepin-lib/PKGBUILD
@@ -9,8 +9,8 @@ url="https://github.com/linuxdeepin/go-lib"
 license=('GPL3')
 depends=('dbus' 'libpulse' 'gdk-pixbuf2' 'gdk-pixbuf-xlib' 'mobile-broadband-provider-info' 'libx11' 'libcanberra'
          'golang-gopkg-alecthomas-kingpin.v2' 'golang-deepin-gir'
-         'golanghub-linuxdeepin-go-x11-client' 'golang-golang-x-net' 'golang-golang-x-image')
-         # 'golanghub-cryptix-wav' not packaged yet, paused until our go packaging standards formed
+         'golang-github-linuxdeepin-go-x11-client' 'golang-golang-x-net' 'golang-golang-x-image')
+         # 'golang-github-cryptix-wav' not packaged yet, paused until our go packaging standards formed
 makedepends=('iso-codes' 'golang-gopkg-check.v1' 'git' 'go') # git needed only for go get
 groups=('deepin')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/go-lib/archive/$pkgver.tar.gz")
