--- a/deepincn/git/deepin-api-git/PKGBUILD
+++ b/deepincn/git/deepin-api-git/PKGBUILD
@@ -21,7 +21,7 @@ provides=('deepin-api')
 conflicts=('deepin-api')
 groups=('deepin-git')
 install=deepin-api.install
-source=("$pkgname::git://github.com/linuxdeepin/dde-api/"
+source=("$pkgname::https://github.com/linuxdeepin/dde-api/"
         deepin-api.sysusers)
 sha512sums=('SKIP'
             'e894eb3928af9e244fa78010fdf16c8abb6ce18df114cf05327d02b18774d6ba5b023e4dfa0d07042f4e44a5c6e2ddb55b07f3e0db466a0e6169b52465fdefd6')
