--- a/deepincn/git/deepin-session-ui-git/PKGBUILD
+++ b/deepincn/git/deepin-session-ui-git/PKGBUILD
@@ -13,7 +13,7 @@ makedepends=('git' 'deepin-gettext-tools-git' 'cmake' 'ninja' 'deepin-dock-git' 
 provides=('deepin-notifications' 'deepin-session-ui')
 conflicts=('dde-workspace' 'deepin-session-ui' 'deepin-notifications')
 groups=('deepin-git')
-source=("$pkgname::git://github.com/linuxdeepin/dde-session-ui"
+source=("$pkgname::https://github.com/linuxdeepin/dde-session-ui"
   fix-cmakelist.patch)
 sha512sums=('SKIP'
             '50d74d551c71a0039b6064d54939fb8a611941d8e8c653c96a5fc146f3dc168b396d0a4a21c269abb9331fbc7a7cc33909069ea4f8cb20db752705369f1d3710')
