--- a/deepincn/git/dtkcommon-git/PKGBUILD
+++ b/deepincn/git/dtkcommon-git/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=('git' 'qt5-tools' 'gtest' 'gmock')
 conflicts=('dtkcore-git<5.4.0' 'dtkcore<5.4.0' 'dtkgui-git<5.4.0' 'dtkgui<5.4.0' 'dtkcommon')
 providers=('dtkcore-git' 'dtkgui-git')
 groups=('deepin-git')
-source=("$pkgname::git://github.com/linuxdeepin/dtkcommon.git")
+source=("$pkgname::https://github.com/linuxdeepin/dtkcommon.git")
 sha512sums=('SKIP')
 
 pkgver() {
