--- a/deepincn/git/golang-github-linuxdeepin-go-x11-client-git/PKGBUILD
+++ b/deepincn/git/golang-github-linuxdeepin-go-x11-client-git/PKGBUILD
@@ -13,7 +13,7 @@ groups=('deepin-git')
 depends=('golang-golang-x-text')
 makedepends=('git' 'go' 'xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v2')
 checkdepends=('xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v2' 'git')
-source=("$pkgname::git://github.com/linuxdeepin/go-x11-client")
+source=("$pkgname::https://github.com/linuxdeepin/go-x11-client")
 sha512sums=('SKIP')
 
 pkgver() {
